output/dev/catalan.err
output prefix: llvm/dev/catalan
llvmas: /Users/cmk/llvm/bin/llvm-as
llc: /Users/cmk/llvm/bin/llc
cc: gcc
codegen: /Users/cmk/Developer/cworkspace/compiler/hw4/Lexer/answer/decafcomp
stdlib: /Users/cmk/Developer/cworkspace/compiler/hw4/Lexer/answer/decaf-stdlib.c
generating llvm code:/Users/cmk/Developer/cworkspace/compiler/hw4/Lexer/answer/decafcomp ... ok
; ModuleID = 'Catalan'

define i32 @cat(i32 %n) {
entry:
  %n1 = alloca i32
  store i32 %n, i32* %n1
  %n2 = load i32, i32* %n1
  %multmp = mul i32 2, %n2
  %n3 = load i32, i32* %n1
  %calltmp = call i32 @choose(i32 %multmp, i32 %n3)
  %n4 = load i32, i32* %n1
  %addtmp = add i32 %n4, 1
  %divtmp = sdiv i32 %calltmp, %addtmp
  ret i32 %divtmp
}

define i32 @choose(i32 %a, i32 %b) {
entry:
  %b2 = alloca i32
  %a1 = alloca i32
  store i32 %a, i32* %a1
  store i32 %b, i32* %b2
  %a3 = load i32, i32* %a1
  %calltmp = call i32 @fact(i32 %a3)
  %b4 = load i32, i32* %b2
  %calltmp5 = call i32 @fact(i32 %b4)
  %a6 = load i32, i32* %a1
  %b7 = load i32, i32* %b2
  %subtmp = sub i32 %a6, %b7
  %calltmp8 = call i32 @fact(i32 %subtmp)
  %multmp = mul i32 %calltmp5, %calltmp8
  %divtmp = sdiv i32 %calltmp, %multmp
  ret i32 %divtmp
}

define i32 @fact(i32 %n) {
entry:
  %n1 = alloca i32
  store i32 %n, i32* %n1
  %n2 = load i32, i32* %n1
  %eqtmp = icmp eq i32 %n2, 1
  br i1 %eqtmp, label %then, label %else

then:                                             ; preds = %entry
  br label %ifcont

else:                                             ; preds = %entry
  %n3 = load i32, i32* %n1
  %n4 = load i32, i32* %n1
  %subtmp = sub i32 %n4, 1
  %calltmp = call i32 @fact(i32 %subtmp)
  %multmp = mul i32 %n3, %calltmp
  br label %ifcont

ifcont:                                           ; preds = %else, %then
  %iftmp = phi i32 [ 1, %then ], [ %multmp, %else ]
  ret i32 %iftmp
}

define void @main() {
entry:
  %calltmp = call i32 @read_int()
  %calltmp1 = call i32 @cat(i32 %calltmp)
  call void @print_int(i32 %calltmp1)
  ret i32 0
}

declare void @print_int(i32)

declare i32 @read_int()
assembling to bitcode:/Users/cmk/llvm/bin/llvm-as "llvm/dev/catalan.llvm" -o "llvm/dev/catalan.llvm.bc" ... failed (1)
/Users/cmk/llvm/bin/llvm-as: llvm/dev/catalan.llvm:65:7: error: value doesn't match function result type 'void'
  ret i32 0
      ^
converting to native code:/Users/cmk/llvm/bin/llc "llvm/dev/catalan.llvm.bc" -o "llvm/dev/catalan.llvm.s" ... failed (1)
/Users/cmk/llvm/bin/llc: llvm/dev/catalan.llvm.bc: error: Could not open input file: No such file or directory
linking:gcc -o "llvm/dev/catalan.llvm.exec" "llvm/dev/catalan.llvm.s" "/Users/cmk/Developer/cworkspace/compiler/hw4/Lexer/answer/decaf-stdlib.c" ... failed (1)
clang: error: no such file or directory: 'llvm/dev/catalan.llvm.s'
using input file: /Users/cmk/Developer/cworkspace/compiler/hw4/Lexer/testcases/dev/catalan.in
running:llvm/dev/catalan.llvm.exec ...Traceback (most recent call last):
  File "/Users/cmk/Developer/cworkspace/compiler/hw4/Lexer/answer/llvm-run", line 170, in <module>
    result &= run("running", "%s.llvm.exec" % (out_prefix), ".run", input_file, out_prefix)
  File "/Users/cmk/Developer/cworkspace/compiler/hw4/Lexer/answer/llvm-run", line 90, in run
    retval = subprocess.call(shlex.split(cmd), stdin=infile, stdout=outoutfile, stderr=outerrfile)
  File "/usr/local/Cellar/python/2.7.10_2/Frameworks/Python.framework/Versions/2.7/lib/python2.7/subprocess.py", line 522, in call
    return Popen(*popenargs, **kwargs).wait()
  File "/usr/local/Cellar/python/2.7.10_2/Frameworks/Python.framework/Versions/2.7/lib/python2.7/subprocess.py", line 710, in __init__
    errread, errwrite)
  File "/usr/local/Cellar/python/2.7.10_2/Frameworks/Python.framework/Versions/2.7/lib/python2.7/subprocess.py", line 1335, in _execute_child
    raise child_exception
OSError: [Errno 2] No such file or directory
